--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "git+https://github.com/Financial-Times/n-teaser-collection.git"
   },
   "license": "MIT",
+  "dependencies": {
+    "@financial-times/n-teaser": "^1.0.0"
+  },
   "devDependencies": {
     "bower": "^1.7.9",
     "npm-prepublish": "^1.2.1"
