Change name in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "n-teaser-collection",
+  "name": "n-teaser-collection-v2",
   "homepage": "https://github.com/financial-times/n-teaser-collection",
   "description": "A set of layouts for groups of n-teasers",
   "ignore": [
